--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+      <title>Rinse</title>
   </head>
   <body>
-   <p>Hello World</p>
+   <h1>Helo, Code School!</h1>
+   <ul>
+   <li>Basics</li>
+   <li>Applications</li>
+   </ul>      
   </body>
 </html>
