--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>Rinse</title>
   </head>
   <body>
-   <h1>Helo, Code School!</h1>
+   <h1>Hello, Code School!</h1>
    <ul>
    <li>Basics</li>
    <li>Applications</li>
