--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,33 @@
   <link rel="stylesheet" href="main.css">
   <title>HTML Portfolio</title>
 </head>
+
+    <div class="header">
+    <h1>Rinse Jacobs</h1>
+    <h2>Web Designer</h2>
+</div>
+    
+<div class="tagline">
+  <h3>Learn More About Me</h3>
+    <p>I'm developing this project to try and test my HTML knowledge from previous courses.</p>
+</div>
+
+<div class="skills">
+  <h3>My Skills</h3>
+    <p>I enjoy writing front-end code with these technologies.</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+    </ul>
+</div>
+
+<div class="contact">
+  <h3>Contact Me</h3>
+    <p>Feel free to contact me by <a href="http://www.gmail.com" target="_blank">email</a></p>
+</div>
 <body>
 
-  Welcome to the HTML Portfolio Project
 
 </body>
 </html>
