--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-<html lang='en'>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-      <title>Rinse</title>
-  </head>
-  <body>
-   <h1>Hello, Code School!</h1>
-   <ul>
-   <li>Basics</li>
-   <li>Applications</li>
-   </ul>      
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+  <link rel="stylesheet" href="main.css">
+  <title>HTML Portfolio</title>
+</head>
+<body>
+  <div class="header">
+    <h1>Rinse Jacobs</h1>
+    <h2>Web Designer</h2>
+  </div>
+    
+<div class="tagline">
+  <h3>Learn More About Me</h3>
+    <p>I'm developing this project to try and test my HTML knowledge from previous courses.</p>
+</div>
+
+<div class="skills">
+  <h3>My Skills</h3>
+    <p>I enjoy writing front-end code with these technologies.</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+    </ul>
+</div>
+
+<div class="contact">
+  <h3>Contact Me</h3>
+    <p>Feel free to contact me by <a href="http://www.gmail.com" target="_blank">email</a></p>
+</div>
+
+</body>
 </html>
